--- a/index.html
+++ b/index.html
@@ -43,10 +43,21 @@
         font-size: 28px;
         font-weight: 600;
         color: #e6e9ef;
-        letter-spacing: 0.5px;
     }
 
-    /* Weather icon */
+    .top-btn {
+        display: inline-block;
+        margin-bottom: 15px;
+        padding: 10px 18px;
+        background: linear-gradient(135deg, #00aaff, #007bff);
+        border-radius: 8px;
+        color: white;
+        text-decoration: none;
+        font-size: 15px;
+        font-weight: bold;
+        box-shadow: 0 4px 14px rgba(0,153,255,0.3);
+    }
+
     .weather-icon {
         width: 90px;
         height: 90px;
@@ -61,7 +72,6 @@
         color: #d4d7dd;
     }
 
-    /* ----- FLIGHT RISK CARD ----- */
     #risk {
         margin: 22px 0;
         padding: 16px;
@@ -69,11 +79,9 @@
         font-size: 20px;
         font-weight: bold;
         color: white;
-        box-shadow: 0 0 15px rgba(0,0,0,0.35);
         transition: 0.3s ease;
     }
 
-    /* Inputs */
     input {
         padding: 12px;
         width: 42%;
@@ -83,15 +91,8 @@
         background: rgba(255,255,255,0.09);
         color: #fff;
         font-size: 16px;
-        outline: none;
-        backdrop-filter: blur(4px);
     }
 
-    input::placeholder {
-        color: #bfc4cc;
-    }
-
-    /* ----- BUTTONS ----- */
     button {
         padding: 12px 26px;
         border: none;
@@ -100,22 +101,8 @@
         border-radius: 10px;
         cursor: pointer;
         font-size: 17px;
-        font-weight: 600;
         margin-top: 12px;
-        letter-spacing: 0.3px;
-        transition: 0.25s ease-in-out;
-        box-shadow: 0 6px 20px rgba(0,153,255,0.35);
-    }
-
-    button:hover {
-        transform: scale(1.05);
-        box-shadow: 0 8px 25px rgba(0,153,255,0.5);
-    }
-
-    hr {
-        margin: 28px 0;
-        border: none;
-        border-top: 1px solid rgba(255,255,255,0.12);
+        font-weight: bold;
     }
 </style>
 </head>
@@ -123,6 +110,11 @@
 <body>
 
 <div id="container">
+
+    <!-- Return button -->
+    <a class="top-btn" href="https://survey123.arcgis.com/share/780efb88fb6649e0a5c88dd981b91ebb">
+        🔙 Return to Survey Form
+    </a>
 
     <h2>📡 Live Drone Weather</h2>
 
@@ -137,12 +129,7 @@
 
     <hr>
 
-    <h3>📍 Use Your Location</h3>
-    <button onclick="useLocation()">Get Live Weather</button>
-
-    <hr>
-
-    <h3>🔢 Or Enter Coordinates</h3>
+    <h3>🔢 Enter Coordinates (Fallback if GPS blocked)</h3>
     <input id="lat" placeholder="Latitude">
     <input id="lon" placeholder="Longitude">
     <br>
@@ -156,13 +143,13 @@ function updateRisk(wind) {
     const box = document.getElementById("risk");
 
     if (wind < 5) {
-        box.style.background = "rgba(40, 167, 69, 0.8)";
+        box.style.background = "rgba(40, 167, 69, 0.85)";
         box.textContent = "Flight Risk: LOW (Safe)";
     } else if (wind < 10) {
-        box.style.background = "rgba(255, 165, 0, 0.8)";
+        box.style.background = "rgba(255, 165, 0, 0.85)";
         box.textContent = "Flight Risk: MEDIUM (Caution)";
     } else {
-        box.style.background = "rgba(220, 53, 69, 0.8)";
+        box.style.background = "rgba(220, 53, 69, 0.85)";
         box.textContent = "Flight Risk: HIGH (Unsafe)";
     }
 }
@@ -185,19 +172,32 @@ async function getWeather(lat, lon) {
     updateRisk(data.wind.speed);
 }
 
-function useLocation() {
-    navigator.geolocation.getCurrentPosition(pos => {
-        getWeather(pos.coords.latitude, pos.coords.longitude);
-    });
-}
+/* AUTO-LOAD WEATHER WHEN PAGE OPENS */
+window.onload = function() {
+    if (navigator.geolocation) {
+        navigator.geolocation.getCurrentPosition(
+            pos => {
+                getWeather(pos.coords.latitude, pos.coords.longitude);
+            },
+            err => {
+                console.log("GPS blocked, waiting for manual entry.");
+            }
+        );
+    }
+};
 
+/* Manual Coordinates Mode */
 function manualWeather() {
     const lat = parseFloat(document.getElementById("lat").value);
     const lon = parseFloat(document.getElementById("lon").value);
-    if (!lat || !lon) { alert("Enter valid coordinates."); return; }
+    if (!lat || !lon) { 
+        alert("Enter valid coordinates.");
+        return;
+    }
     getWeather(lat, lon);
 }
 </script>
 
 </body>
 </html>
+
